# medreadmit-ai

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  make.ps1  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: REPORT_DRAFT.md  WEEK1_RESULTS.md
frontend/: README.md  api_client.py  app.py
frontend/components/: risk_gauge.py  shap_chart.py
frontend/sample_patients/: test_set_samples.json
models/: feature_manifest.json
notebooks/: 01_eda.ipynb
reports/: latency_baseline.md
scripts/: benchmark_api.py  export_feature_manifest.py  export_sample_patients.py  plot_fairness_age.py  run_fairness_audit.py  run_shap_analysis.py
src/api/: explainer.py  feature_alignment.py  main.py  schemas.py
src/data/: download.py  load.py  make_target.py  split.py
src/evaluate/: bootstrap.py  fairness.py  metrics.py
src/explain/: shap_utils.py
src/features/: build_features.py  icd9_grouping.py
src/models/: calibrate_lgbm.py  platt_wrapper.py  train_lgbm.py  train_logreg.py  tune_lgbm.py
tests/: test_api.py  test_api_client.py  test_bootstrap.py  test_explainer.py  test_feature_alignment.py  test_features.py  test_icd9.py  test_split.py  test_target.py
